fix: side menu item cut off bug fix

--- a/_sass/components/aside-menu.scss
+++ b/_sass/components/aside-menu.scss
@@ -243,6 +243,7 @@ h3.menu-header {
 
 .aside-menu {
   width: 109%;
+  padding-right: 9%;
   margin-top: 0;
   padding-top: $menu-top;
   display: block;
